bug: fixed cursor disappearing at edges, and not centered at larger sizes

--- a/src/style.css
+++ b/src/style.css
@@ -367,7 +367,7 @@ canvas {
     left: 0;
     z-index: 2;
     pointer-events: auto;
-    cursor: none;
+    cursor: crosshair;
 }
 
 #toast {
